--- a/src/scss/phy/tabs.scss
+++ b/src/scss/phy/tabs.scss
@@ -7,3 +7,13 @@
     }
   }
 }
+
+.card-tabs > .card-tab {
+  margin-bottom: calc(-1 * $border-width - 1px); // -1px fixes some clipping issues
+  z-index: 1;
+  border: $border-width solid transparent;
+  border-bottom: none;
+  &.active {
+    border-color: $border-color-translucent;
+  }
+}
